tests/NormalTests/paczka1/fuzzy1/56026743.err
Error in line 2: EZz S466 77,1
Error in line 14: 2wZEfQlvty S466 1,2
Error in line 18: 2wZEfQlvty A764 43,5
Error in line 23: 2wZEfQlvty S183 2770
Error in line 24: DFT S183 41,0
Error in line 25: EZz S183 21,1
Error in line 31: A764 A628 45,5
